Fix routing issues

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 	<body id="body">
 		<div class="pre__header">
 			<div class="pre__header--text">
-				<strong>Mercado de Artesanías y Productos Hechos a Mano</strong>
+				<strong>Mercado de Artesanías y Productos Hechos a Man</strong>
 			</div>
 			<div class="pre__header--links">
 				<ul>
